--- a/change_bg_color/index.html
+++ b/change_bg_color/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Change Background Color</title>
+    <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
 <button>Click Me!</button>
